--- a/force-app/main/default/classes/EmailLimitChecker.cls
+++ b/force-app/main/default/classes/EmailLimitChecker.cls
@@ -1,14 +1,14 @@
 public with sharing class EmailLimitChecker {
-    @InvocableMethod(label='checkEmailLimits' description='Returns true if limit is not hit.')
-    public static Boolean checkEmailLimits() {
+
+    @InvocableMethod(label='Check Email Limits')
+    public static List<EmailLimitResult> checkEmailLimits(List<EmailLimitResult> dummyInput) {
         Integer used = Limits.getEmailInvocations();
         Integer allowed = Limits.getLimitEmailInvocations();
-        if (used < allowed) {
-            System.debug('Email limit is within the allowed range. Used: ' + used + ', Allowed: ' + allowed);
-            return true;
-        } else {
-            System.debug('Email limit exceeded! Used: ' + used + ', Allowed: ' + allowed);
-            return false;
-        }
+
+        EmailLimitResult result = new EmailLimitResult();
+        result.allowed = (used < allowed) ? 1 : 0;
+
+        return new List<EmailLimitResult>{ result };
     }
+
 }
