--- a/force-app/main/default/classes/EmailLimitChecker.cls
+++ b/force-app/main/default/classes/EmailLimitChecker.cls
@@ -7,7 +7,7 @@ public with sharing class EmailLimitChecker {
 
         EmailLimitResult result = new EmailLimitResult();
         result.allowed = (used < allowed) ? 1 : 0;
-        System.debug('Email Invocations Used(Test In Flow): ' + used);
+        System.debug('Email Invocations Used(Test In Flow): ' + result.allowed);
         return new List<EmailLimitResult>{ result };
     }
 
